feat: add pdf-lib and file-saver for PDF export functionality
- Install pdf-lib for PDF generation and manipulation
- Install file-saver for client-side file downloads
- Update package-lock.json with new dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.58.0",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "openai": "^5.23.2",
