--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "open-location-code": "^1.0.3",
     "openai": "^5.23.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
