refactor: Update photo upload to use hierarchical storage structure
- Change storage path from agent-id/timestamp.ext to agent-id/slug/photo-N.ext
- Update upload API to require propertySlug parameter
- Modify create-property flow: create property first, then upload photos with real slug
- Update edit-property to pass existing property slug to upload API
- Add dotenv dependency for migration scripts
- Ignore migration scripts in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Scripts de migración (solo para uso local)
+scripts/migrar-storage.mjs
+scripts/limpiar-archivos-viejos.mjs
