--- a/package.json
+++ b/package.json
@@ -12,26 +12,23 @@
   },
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.58.0",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-    "leaflet": "^1.9.4",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
-    "open-location-code": "^1.0.3",
     "openai": "^5.23.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.19.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
